# pdfedit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHIP_READINESS.md  build.bat  build.sh  make_icon.py  pdfedit.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
tests/: README.md  conftest.py  test_add_text_dialog.py  test_annotation_colors.py  test_annotations.py  test_bates.py  test_compress_pdf.py  test_crop_pages.py  test_drawing_tools.py  test_edit_text.py  test_file_ops.py  test_find.py  test_fonts.py  test_form_builder_panel.py  test_form_correctness.py  test_form_linking.py  test_form_properties.py  test_form_round_trip.py  test_forms.py  test_image_overlay.py  test_multi_doc_tabs.py  test_ocr.py  test_page_ops.py  test_page_thumbnails.py  test_pages.py  test_panel_chrome.py  test_protect_unlock.py  test_recent.py  test_save.py  test_settings.py  test_signature_dialog_preview.py  test_signature_resize.py  test_smoke.py  test_split_pdf.py  test_theme.py  test_theme_polish.py  test_toolbar_overflow.py  test_undo.py
